[package]
name = "slp-server-rust"
version = "2.0.0-rust.alpha.10"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ldn_mitm"]
ldn_mitm = []

[dependencies]
udp-listener = "0.1"
anyhow = "1.0"
log = "0.4.8"
env_logger = "0.6.2"
lazy_static = "1.4.0"
async-trait = "0.1.27"
downcast-rs = "1.1.1"
smoltcp = "0.6.0"
lru = "0.4.3"
bytes = "0.5"
hex = "0.4.2"
backtrace = "0.3"
structopt = "0.3"
sha-1 = "0.8.2"

warp = "0.2"
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

async-graphql = "1.16.0"
async-graphql-warp = "1.14.20"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["mswsock", "winsock2"] }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "udp_server"
path = "bench/udp_server.rs"
harness = false
