[package]
name = "slp-server-rust"
version = "2.0.0-rust.alpha.11"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ldn_mitm"]
ldn_mitm = []

[dependencies]
log = "0.4.8"
env_logger = "0.11.0"
lazy_static = "1.4.0"
async-trait = "0.1.27"
downcast-rs = "1.1.1"
smoltcp = "0.6.0"
lru = "0.12.1"
bytes = "1.5.0"
hex = "0.4.2"
backtrace = "0.3"
structopt = "0.3"

axum = "0.7.4"
futures = "0.3.1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

async-graphql = "7.0.1"
async-graphql-axum = "7.0.1"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
http = "1.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["mswsock", "winsock2"] }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "udp_server"
path = "bench/udp_server.rs"
harness = false
