[package]
name = "slp-server-rust"
version = "3.0.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ldn_mitm"]
ldn_mitm = []
benchmarking = []

[dependencies]
log = "0.4.20"
env_logger = "0.11.0"
once_cell = "1.19.0"
async-trait = "0.1.77"
downcast-rs = "1.2.0"
smoltcp = "0.7.5"
lru = "0.12.1"
bytes = "1.5.0"
hex = "0.4.3"
backtrace = "0.3.69"
clap = { version = "4.4.18", features = ["derive"] }

axum = "0.7.4"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["time", "sync"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

async-graphql = "7.0.1"
async-graphql-axum = "7.0.1"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
http = "1.0.0"
parking_lot = "0.12.1"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "udp_server"
path = "bench/udp_server.rs"
harness = false
